# libnv

./: .gitignore  ARCHITECTURE.md  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.old  Makefile  README.md  build.sh  fix_types.sh  test_compile.sh  toolchain-arm.cmake
.github/workflows/: ci.yml
app/: CMakeLists.txt  nvd.c
cmake/: EmbeddedProfile.cmake
doc/: 规则
docs/: event_loop.md  event_loop_implementation_summary.md  memory_pool.md  network_implementation_summary.md
etc/: nv.conf  nv.conf.embedded  nv_loadlib_test.conf
examples/: CMakeLists.txt  Makefile  benchmark_nv.c  event_loop_advanced_demo.c  event_loop_demo.c  memory_pool_demo.c  network_demo.c  simple_server.c
examples/ex0/: benchmark_nv.c
examples/ex1/: nv_all_test.c
examples/ex2/: evn.sh  nv_tcp_cli.c  nv_tcp_srv.c
examples/ex3/: Makefile  multicast_ipv4.c  nv_udp_cli.c  nv_udp_srv.c
examples/ex4/: Makefile
src/: CMakeLists.txt  Makefile
src/base/: makefile  nv_all_test.c  nv_base_include.h  nv_config.h  nv_ini.c  nv_ini.h  nv_pool.c  nv_pool.h
src/base/algo/: nv_base64.c  nv_base64.h  nv_crc16.c  nv_crc16.h  nv_hash.c  nv_hash.h  nv_md5.c  nv_md5.h
src/base/core/: nv_base.c  nv_base.h  nv_core.h
src/base/cpu/: sched_setaffinity.c
src/base/data/: nv_dict.c  nv_dict.h  nv_graph.c  nv_graph.h  nv_hash_table.c  nv_hash_table.h  nv_heap.c  nv_heap.h  nv_json.c  nv_json.h  nv_list.c  nv_list.h  nv_queue.c  nv_queue.h  nv_rb_tree.c  nv_rb_tree.h  nv_set.c  nv_set.h  nv_sqlite.c  nv_sqlite.h  nv_stack.c  nv_stack.h  nv_xml.c  nv_xml.h  readMe
src/base/hw/: nv_i2c_bus.c  nv_i2c_bus.h  nv_rs485.c  nv_rs485.h  nv_serial.c  nv_serial.h  nv_spi.c  nv_spi.h  nv_usb.c  nv_usb.h
src/base/ipc/: nv_fifo.c  nv_fifo.h  nv_message_queue.c  nv_message_queue.h  nv_mmap.c  nv_mmap.h  nv_pipe.c  nv_pipe.h  nv_semaphore.c  nv_semaphore.h  nv_shm.c  nv_shm.h  nv_signal.c  nv_signal.h  readMe
src/base/log/: nv_errno.c  nv_errno.h  nv_log.c  nv_log.h
src/base/mis/: nv_bcd.c  nv_bcd.h
src/base/misc/: nv_convert.c  nv_convert.h
src/base/net/: net_info.c  nv_net.c  nv_net.h  nv_socket.c  nv_socket.h  nv_socket_epoll.c  nv_socket_epoll.h  nv_socket_poll.c  nv_socket_poll.h  nv_socket_select.c  nv_socket_select.h  nv_unix_socket.h  nv_unxi_socket.c
src/base/sys/: nv_cmd.c  nv_cmd.h  nv_dlopen.c  nv_dlopen.h  nv_file.c  nv_file.h  nv_fork.c  nv_fork.h  nv_lock.c  nv_lock.h  nv_math.c  nv_math.h  nv_mem.c  nv_mem.h  nv_permissions.c  nv_permissions.h  nv_secure.c  nv_secure.h  nv_string.c  nv_string.h  nv_sys.c  nv_sys.h  nv_thread.c  nv_thread.h  nv_thread_pool.c  nv_thread_pool.h  nv_time.c  nv_time.h  nv_timer_task.c  nv_timer_task.h  nv_version.c  nv_version.h  nv_watchdog.c  nv_watchdog.h
src/core/: nv_config.h  nv_core.c  nv_core.h  nv_core_args.c  nv_core_cli.c  nv_core_cli.h  nv_core_config.c  nv_core_config.h  nv_core_ctl.c  nv_core_health.c  nv_core_lock.c  nv_core_modules.c  nv_core_modules.h  nv_core_private.h  nv_core_run.c  nv_core_startup.c  nv_core_telnet.c  nv_core_telnet.h  nv_core_worker.c  nv_core_worker.h  nv_log.c  nv_log.h
src/core/bus/: nv_core_pubsub.c
src/core/cli/: nv_core_ctl.c  nv_core_ctl.h
src/core/loadlib/: nv_core_loadlib.c
src/core/runtime/: nv_core.c  nv_core.h  nv_core_args.c  nv_core_config.c  nv_core_health.c  nv_core_health.h  nv_core_lock.c  nv_core_lock.h  nv_core_private.h  nv_core_run.c  nv_core_startup.c  nv_core_worker.c
src/event/: nv_event.c  nv_event.h  nv_event.os  nv_event_accept.h  nv_event_accept.os  nv_event_connect.c  nv_event_connect.os  nv_event_tcp.c  nv_event_tcp.h  nv_evnet_udp.c  nv_evnet_udp.h  nv_loop.c  nv_loop.h  nv_tcp.c  nv_tcp.h  nv_udp.c  nv_udp.h
src/include/: nv.h  nv_build_info.h.in
src/log/: CMakeLists.txt  nv_errno.c  nv_errno.h  nv_log.c  nv_log.h
src/main/: nv_main.c  nv_main.h
src/module/loadlib_alpha/: loadlib_alpha.c
src/module/loadlib_beta/: loadlib_beta.c
src/unix/: nv_alloc.c  nv_alloc.d  nv_alloc.h  nv_dlopen.c  nv_dlopen.d  nv_dlopen.h  nv_dlopen.os  nv_errno.c  nv_errno.d  nv_errno.h  nv_files.c  nv_files.d  nv_files.h  nv_files.os  nv_linux_config.h  nv_shmem.c  nv_shmem.d  nv_shmem.h  nv_socket.c  nv_socket.h  nv_time.c  nv_time.d  nv_time.h  nv_time.os
src/util/: ReadMe  makefile  nv_all_test.c  nv_base64.h  nv_crc16.c  nv_crc16.h  nv_fifo.c  nv_fifo.h  nv_file.c  nv_file.h  nv_fork.c  nv_fork.h  nv_hash.h  nv_hash_table.c  nv_hash_table.h  nv_i2c_bus.c  nv_i2c_bus.h  nv_list.c  nv_list.h  nv_lock.c  nv_lock.h  nv_math.h  nv_md5.c  nv_md5.h  nv_message_queue.h  nv_pipe.c  nv_pipe.h  nv_rb_tree.c  nv_rb_tree.h  nv_semaphore.h  nv_serial.h  nv_shm.h  nv_signal.c  nv_signal.h  nv_socket.c  nv_socket.h  nv_socket_epoll.c  nv_socket_epoll.h  nv_socket_poll.c  nv_socket_poll.h  (+14 more)
src/util/algo/: nv_hash.c  nv_hash.h
src/util/data/: nv_dict.c  nv_dict.h  nv_graph.c  nv_hash_table.c  nv_hash_table.h  nv_heap.c  nv_list.c  nv_list.h  nv_queue.c  nv_rb_tree.c  nv_rb_tree.h  nv_set.c  nv_stack.c  readMed
src/util/hw/: ReadMe  nv_i2c_bus.h  nv_rs485.c  nv_rs485.h  nv_serial.h
src/util/ipc/: nv_fifo.c  nv_fifo.h  nv_lock.h  nv_message_queue.c  nv_mmap.c  nv_mmap.h  nv_pipe.h  nv_semaphore.c  nv_shm.c  nv_signal.h
src/util/net/: nv_socket.c  nv_socket_epoll.h  nv_socket_select.h  nv_unix_socket.h  nv_unxi_socket.c  readMe
src/util/sys/: nv_file.c  nv_file.h  nv_fork.h  nv_math.c  nv_math.h  nv_mem.c  nv_permissions.h  nv_string.c  nv_string.h  nv_thread.c  nv_thread.h  nv_thread_pool.c  nv_time.h  nv_timer_task.c
test/: CMakeLists.txt  Makefile  benchmark_nv.c  env.sh
test/arp/: Makefile  arp_aging  arp_aging.c  arp_aging_message.c  arp_broadcast.c  gratuitous_arp.c  gratuitous_na.c  gratuitous_nav6.c  ndp_aging  ndp_aging.c
test/ex0/: Makefile
test/ex1/: Makefile  nv_all_test.c
test/ex2/: nv_tcp_srv.c
test/ex3/: icmpv6_listener  icmpv6_listener.c  multicast_ipv6.c  nv_udp_cli.c  nv_udp_srv.c
test/ex4/: nv_net.c
test/misc/: arp_broadcast.c
test/unit/: CMakeLists.txt  test_nv_json.c  test_nv_log.c  test_nv_secure.c  test_nv_sqlite.c  test_nv_xml.c
